Add simple-analytics front and back

--- a/_snippets/carousel.html
+++ b/_snippets/carousel.html
@@ -53,5 +53,6 @@
         lastVisible = images[i]
       })
     </script>
+    <script src="/src/js/simple-analitics-front.js"></script>
   </body>
 </html>
