Add tracking pixle

--- a/_snippets/carousel.html
+++ b/_snippets/carousel.html
@@ -14,6 +14,14 @@
   </head>
 
   <body>
+    <!-- Tracking pixel -->
+    <!-- <img
+      style="width: 0; height: 0; display: none"
+      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkqAcAAIUAgUW0RjgAAAAASUVORK5CYII="
+    /> -->
+    <img style="width: 0; height: 0; display: none" src="/src/img/pixel.gif" />
+    <img style="width: 0; height: 0; display: none" src="/src/img/blank.jpeg" />
+
     <!-- create your markup and styles -->
     <!-- <img src="https://en.js.cx/carousel/1.png" /> -->
 
@@ -53,6 +61,6 @@
         lastVisible = images[i]
       })
     </script>
-    <script src="/src/js/simple-analitics-front.js"></script>
+    <!-- <script src="/src/js/simple-analitics-front.js"></script> -->
   </body>
 </html>
